<resources>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="create_new_query">Create new pocket query</string>
    <string name="app_name">Pocket Query Creator</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="view_bad_response">View log file</string>
    <string name="email_bad_response">Email log file</string>
    <string name="cant_write_directory">Can not write into this directory</string>
    <string name="could_not_read_folder">Could not read folder contents</string>
    <string name="title_max_caches">Maximum caches</string>
    <string name="summary_max_caches">Maximum number of caches to return. Highest allowed value 1000</string>
    <string name="title_metric_preferences">Metric distances</string>
    <string name="summary_metric_preferences">Use km instead of miles</string>
    <string name="title_disabled_preference">Create disabled</string>
    <string name="summary_disabled_preference">Create Query in state such that it won\'t autorun. Allows manual modification after creation</string>
    <string name="title_download_preference">Download results</string>
    <string name="summary_download_preference">After Pocket Query runs, download output</string>
    <string name="title_cgeo_preference">c:geo compatiblity</string>
    <string name="summary_cgeo_preference">Downloaded PQs use c:geo compatible filenames</string>
    <string name="title_nameprefix_preference">Filename Prefix</string>
    <string name="summary_nameprefix_preference">...put on front of downloaded Pocket Query filename</string>
    <string name="title_default_download_dir_preference">Default download directory</string>
    <string name="summary_default_download_dir_preference">Output to default \'Download\' directory (%s)</string>
    <string name="title_user_download_dir_preference">Choose download directory</string>
    <string name="summary_retry_preference">How many times should creation steps be reattempted if errors occur. Useful if network connectivity is intermittent or slow</string>
    <string name="title_retry_preference">Retry on errors</string>
    <string name="summary_location_accuracy_preference">How accurate a location fix to wait for, before creating Pocket Query</string>
    <string name="title_location_accuracy_preference">Location accuracy</string>
    <string name="summary_geocoding_provider_preference">Who to use to lookup a name for a location</string>
    <string name="title_geocoding_provider_preference">Geocoding provider</string>
    <string name="summary_debug_preference">Logs into LogCat and a file</string>
    <string name="title_debug_preference">Debug logs</string>
    <string name="message_debug_preference">Logs into LogCat and (if directory available) \'sdcard/Android/data/org.pquery/files/log.html\'. Warning - logs may contain some personal info like your username, although your password should be masked. Cookies will be logged which could potentially be replayed by someone to log into geocaching.com as you</string>
    <string name="title_username_preference">Username</string>
    <string name="summary_username_preference">geocaching.com username</string>
    <string name="dialog_title_username_preference">Enter username</string>
    <string name="title_password_preference">Password</string>
    <string name="summary_password_preference">geocaching.com password</string>
    <string name="dialog_title_password_preference">Enter password</string>
    <string name="filter_cache_type">Cache type</string>
    <string name="filter_container">Container</string>
    <string name="type_wherigo">Wherigo</string>
    <string name="type_adventures">GPS Adventures Exhibit</string>
    <string name="type_traditional">Traditional</string>
    <string name="type_multi">Multi-cache</string>
    <string name="type_virtual">Virtual</string>
    <string name="type_letterbox">Letterbox Hybrid</string>
    <string name="type_event">Event</string>
    <string name="type_unknown">Unknown</string>
    <string name="type_project">Project APE</string>
    <string name="type_webcam">Webcam</string>
    <string name="type_earthcache">Earthcache</string>
    <string name="container_small">Small</string>
    <string name="container_large">Large</string>
    <string name="container_micro">Micro</string>
    <string name="container_other">Other</string>
    <string name="container_regular">Regular</string>
    <string name="container_unknown">Unknown</string>
    <string name="container_virtual">Virtual</string>
    <string name="ok">OK</string>
    <string name="any">Any</string>
    <string name="none">None</string>
    <string name="login_geocaching_com">Logging into Geocaching.com</string>
    <string name="retrieving_creation_page">Retrieving Pocket Query creation page…</string>
    <string name="bad_credentials">Login to Geocaching.com failed. Verify your credentials are correct"</string>
    <string name="failed_login_form">Failed to fill in login form</string>
    <string name="unable_to_submit_login">Unable to submit login form</string>
    <string name="not_premium">You aren\'t a premium member. Goto Geocaching.com and upgrade</string>
    <string name="login_download_fail">Couldn\'t download login page</string>
    <string name="service_creation_failed">Creation failed</string>
    <string name="service_creation_success">Created ok</string>
    <string name="gps_wait_no_fix">Waiting for GPS fix</string>
    <string name="gps_wait">Waiting for GPS fix (accuracy %dm)</string>
    <string name="gps_timeout">Timed out getting GPS fix</string>
    <string name="retrieve_page">Retrieving page</string>
    <string name="refresh_page">Refreshing page</string>
    <string name="creating">Submitting creation page</string>
    <string name="submitting">submitting</string>
    <string name="unable_to_submit_creation_form">Unable to submit creation form</string>
    <string name="creation_pending">View creation progress</string>
    <string name="cancel_creation">Cancel Creation</string>
    <string name="create">Create</string>
    <string name="error_parsing">Problem parsing the geocaching webpage</string>
    <string name="retrieving_page">Retrieving page</string>
    <string name="parsing">Parsing</string>
    <string name="retry_dont">Don\'t retry</string>
    <string name="retry_few">Retry a few times</string>
    <string name="retry_long">Retry for a long time</string>
    <string name="downloaded_pq">Pocket Query downloaded</string>
    <string name="pq_downloaded_into">Pocket Query downloaded into folder %s</string>
    <string name="processing_form">Processing form</string>
    <string-array name="retry">
        <item>@string/retry_dont</item>
        <item>@string/retry_few</item>
        <item>@string/retry_long</item>
    </string-array>
    <string-array name="retry_values">
        <item>0</item>
        <item>3</item>
        <item>30</item>
    </string-array>
    <string-array name="location_accuracy">
        <item>30m</item>
        <item>150m</item>
        <item>1500m</item>
    </string-array>
    <string-array name="location_accuracy_values">
        <item>30</item>
        <item>150</item>
        <item>1500</item>
    </string-array>
    <string name="download_failed">Download failed</string>
    <string name="unable_to_write_file">Unable to write to output file</string>
    <string name="service_cancelled">User cancelled</string>
    <string name="filter_terrain">Terrain</string>
    <string name="filter_difficulty">Difficulty</string>
    <string name="help">Help</string>
    <string name="filter_ignorelist">Not in ignore list</string>
    <string name="filter_enabled">Cache enabled</string>
    <string name="filter_notfound">I haven\'t found</string>
    <string name="filter_found7days">Updated in last 7 days</string>
    <string name="filter_travelbug">Has travel bugs</string>
    <string name="filter_checkboxes">Misc checkboxes</string>
    <string name="filter_idontown">I don\'t own</string>
    <string name="filter_notbeenfound">Not been found</string>
    <string name="download_in_progress">Downloading Pocket Query</string>
    <string name="external_storage_unavailable">Unable to download pocket query as external storage currently unavailable</string>
    <string name="file_creation_error">Unable to create output file</string>
    <string name="creation_zero_pqs">Pocket Query created but didn\'t find any matching geocaches</string>
    <string name="created_ok_and_matches">Pocket Query created and currently matches %d caches</string>
    <string name="parse_error_download_link">Parse error. Can\'t extract download link</string>
    <string name="parse_error_generated_pqs">Parse error. Can\'t extract numb generated pqs</string>
    <string name="response_indicate_failure">Response seemed to indicate creation failed</string>
    <string name="not_geocaching_page">Retrieved web page doesn\'t mention geocaching. A wifi login page?</string>
    <string name="download_not_ready">Pocket Query hasn\'t been run yet</string>
    <string name="auto_name">During creation, try to set from location name</string>
    <string name="directory_picker_title">Choose directory</string>
    <string-array name="geocoder_provider">
        <item>Google</item>
        <item>Gisgraphy</item>
        <item>GeoNames</item>
    </string-array>
    <string-array name="geocoder_provider_values">
        <item>Google</item>
        <item>Gisgraphy</item>
        <item>GeoNames</item>
    </string-array>
    <string-array name="action_bar_list">
        <item>Active</item>
        <item>Downloadable</item>
    </string-array>
    <string name="refresh">Refresh</string>
    <string name="prefs_advanced">Advanced</string>
    <string name="prefs_creation">Creation</string>
    <string name="prefs_download">Download</string>
    <string name="prefs_login">Login credentials</string>
    <string name="actionbar_view_details">Detail</string>
    <string name="downloading">Downloading</string>
    <string name="requesting">requesting</string>
    <string-array name="create_categories">
        <item>Name/Radius</item>
        <item>Location</item>
        <item>Filters</item>
    </string-array>
    <string name="get_pq_list">Get PQ List</string>
    <string name="change_schedule">Change Schedule</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="working">Working</string>
    <string name="filter_name">Name</string>
    <string name="filter_origin">Origin</string>
    <string name="filter_radius">Radius</string>
    <string name="filter_radius_km">" km"</string>
    <string name="filter_radius_miles">" miles"</string>
    <string name="pocket_query_name">Pocket Query Name</string>
    <string name="no_fix_yet">" (no fix yet)"</string>
    <string name="map_point">Map point</string>
    <string name="accuracy">" (accuracy %1$dm)"</string>
    <string name="gps">GPS</string>
    <string name="waiting_for_pq_to_run">Waiting 30 seconds to allow Pocket Query to run</string>
    <string name="enter_gc_credentials">First enter your premium geocaching.com account credentials on the settings page</string>
    <string name="daystogenerate_runqueryonce">Run query once</string>
    <string name="daystogenerate_uncheckDayOfWeekAfterQuery">Uncheck day of week after query runs</string>
    <string name="daystogenerate_runQueryEveryWeekOnCheckedDays">Run query every week on following days</string>
</resources>