<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="disabled_preference"
        android:summary="@string/summary_disabled_preference"
        android:title="@string/title_disabled_preference" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="disabled_preference"
        android:key="download_preference"
        android:summary="@string/summary_download_preference"
        android:title="@string/title_download_preference" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="cgeo_preference"
        android:summary="@string/summary_cgeo_preference"
        android:title="@string/title_cgeo_preference" />

    <EditTextPreference
        android:dependency="cgeo_preference"
        android:defaultValue="pocketquery_"
        android:dialogTitle="@string/title_nameprefix_preference"
        android:inputType=""
        android:key="nameprefix_preference"
        android:summary="@string/summary_nameprefix_preference"
        android:title="@string/title_nameprefix_preference" />

    <!--  summary is set in code -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:disableDependentsState="true"
        android:key="default_download_dir_preference"
        android:summary=""
        android:title="@string/title_default_download_dir_preference" />

    <!--  summary is set in code -->
    <Preference
        android:dependency="default_download_dir_preference"
        android:key="user_download_dir_preference"
        android:summary=""
        android:title="@string/title_user_download_dir_preference">
        <intent android:action="your.action.string" />
    </Preference>


</PreferenceScreen>