<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/retry"
        android:entryValues="@array/retry_values"
        android:key="retry_preference"
        android:summary="@string/summary_retry_preference"
        android:title="@string/title_retry_preference" />

    <ListPreference
        android:defaultValue="150"
        android:entries="@array/location_accuracy"
        android:entryValues="@array/location_accuracy_values"
        android:key="location_accuracy_preference"
        android:summary="@string/summary_location_accuracy_preference"
        android:title="@string/title_location_accuracy_preference" />

    <ListPreference
        android:defaultValue="Google"
        android:entries="@array/geocoder_provider"
        android:entryValues="@array/geocoder_provider_values"
        android:key="geocoding_provider_preference"
        android:summary="@string/summary_geocoding_provider_preference"
        android:title="@string/title_geocoding_provider_preference" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="debug_preference"
        android:summary="@string/summary_debug_preference"
        android:title="@string/title_debug_preference" />

</PreferenceScreen>